// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormErrorMessage > Snapshot > 1`] = `
<span
  aria-live="polite"
  class="Text typo-13 align-left margin HelperText"
  data-testid="bezier-react-form-error-message"
  id="test"
  style="--b-text-color: var(--bgtxt-orange-normal);"
>
  Lorem ipsum
</span>
`;

exports[`FormHelperText > Snapshot > 1`] = `
<span
  class="Text typo-13 align-left margin HelperText"
  data-testid="bezier-react-form-helper-text"
  id="test"
  style="--b-text-color: var(--txt-black-dark);"
>
  Lorem ipsum
</span>
`;
